examples/invalid_policies/contradictory_policy.argx
module invalid.contradictory

policy Bad {
    require external_execution
    deny external_execution
}
